<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_search_recipe_screen"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="64dp"
    android:paddingRight="64dp"
    android:paddingTop="16dp"
    tools:context="com.example.ciyguide.ciyguide.MainScreen"
    android:weightSum="1">

    <TextView
        android:textSize="24sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/enter_ingredients"
        />

    <Space
        android:layout_width="match_parent"
        android:layout_height="12dp" />

    <EditText
        android:id="@+id/search_text_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/insert_ingredient"/>

    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/add_content"
        />

    <Space
        android:layout_width="match_parent"
        android:layout_height="12dp" />

    <Button
        android:id="@+id/camera_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/camera" />

    <TextView
        android:textSize="24sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:gravity="start"
        android:text="@string/ingredients_list"
        />

    <ListView
        android:id="@+id/list_search_tags"
        android:layout_width="wrap_content"
        android:layout_height="177dp"
        android:layout_weight="0.12"></ListView>

    <Space
        android:layout_width="match_parent"
        android:layout_height="12dp" />

    <Button
        android:id="@+id/resulting_recipes_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/find_recipes"
        />

</LinearLayout>