<?xml version="1.0" encoding="utf-8"?>

<!--Created by Marilyn Florek for the Placeholder java file-->
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <include
        layout="@layout/toolbar"/>

    <TextView
        android:id="@+id/first_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/pink"
        android:gravity="center_vertical"
        android:minHeight="?android:attr/listPreferredItemHeight"
        android:padding="20dp"
        android:text="Click Me"
        android:textColor="@android:color/white"
        android:textSize="33sp" />
    <LinearLayout
        android:id="@+id/inside"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sendGrocery"
        android:inputType="phone"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:textSize="20dp"
        android:id="@+id/txtView"
        android:layout_above="@+id/editText2"/>
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <EditText
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:hint="@string/message"
        android:textColor="@color/black"
        android:id="@+id/editText2"
        android:layout_above="@+id/btnSendSMS"
        android:layout_below="@+id/editText"/>

    <Button
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:text="Send Txt"
        android:textStyle="bold"
        android:background="@drawable/button"
        android:id="@+id/btnSendSMS"
        android:layout_below="@+id/editText2"/>
    </GridLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yourRecipe"
        android:inputType="phone"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:textSize="20dp"
        android:id="@+id/txtView2"
        android:layout_gravity="center_horizontal"
        android:layout_above="@+id/editText2"/>
</LinearLayout>
</ScrollView>
